overflow-x: hidden breaks position: fixed

--- a/css/page.css
+++ b/css/page.css
@@ -25,7 +25,6 @@
 }
 
 body {
-	overflow-x: hidden;
 	margin: 0;
 }
 
